[package]
name = "rust_verusd_rpc_server"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
jsonrpc = "0.12"
config = "0.13"
rustls = "0.21"
rustls-pemfile = "1"
tokio-rustls = "0.24"

[dev-dependencies]
rcgen = "0.11"
tempfile = "3"
